--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="csrf-token" content= "<%= csrfToken %>">
+    <link href="./css/style.css" rel="stylesheet" />
     <title>
         <%= title %>
     </title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/tailcombinator.js"></script>
-</head>
-
-<body>
-    <div class="flex justify-center">
-        <div>
-            <%- include('header.ejs') %>
-            <p class="py-2"> <a href="/" class="text-green-600" >Home page</a> </p>
-                <h6>
-                    Login to your account
-                </h6>
-                <form action="/session" method="post" class="min-w-[300px]">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <input type="text" name="email" placeholder="Email" class="w-full" />
-                    <input type="password" name="password" placeholder="Password" class="w-full" />
-                    <button type="submit"
-                        class="bg-green-600 rounded p-2 block w-full text-white hover:bg-green-700 transition mt-2">
-                        Login
-                    </button>
-                </form>
-                <% if(messages && messages.error && messages.error.length> 0) { %>
-                    <% for(var i=0; i<messages.error.length; i++) { %>
-                        <li>
-                            <%= messages.error[i] %>
-                        </li>
-                        <% } %>
-                            <% } %>
-                                <div class="text-center mt-6">
-                                    New User ? Create account here <a href="/signup" class="text-green-600 hover:text-green-700 transition"> Sign
-                                        up</a>
-                                </div>
+    <link href="./css/style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="grid grid-cols-6">
+        <div class="col-start-3 col-span-2">
+          <%- include("header.ejs") %> 
+          <h6 class="py-4">Login to your account</h6>
+          <form action="/session" method="post">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+        <div class="py-3">
+           <label for="email">Email:</label>
+           <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+        </div>  
+        <div class="py-3"> 
+           <label for="password">Password:</label>
+           <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+        </div>  
+        <div class="py-3"> 
+           <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign in</button>        
+        </div>  
+        </form>
+        <% if(messages && messages.error && messages.error.length > 0)  { %>
+            <% for(var i=0; i<messages.error.length; i++) { %>
+              <p class="bg-red-200 my-3 list-none rounded px-4 py-2"><%= messages.error[i] %></p>
+            <% } %>
+          <% } %>
         </div>
-
     </div>
-    <script>
-        tc.c("input", "block mt-2 p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent");
-    </script>
-</body>
+  </body>
+</html>
